syntax = "proto3";

package sample;
import "google/protobuf/timestamp.proto";

service SampleService {
  rpc GetRecode (GetRecodeForm) returns (Recode) {}
  rpc CreateRecode (CreateRecodeForm) returns (Recode) {}
}

message GetRecodeForm {
  int64 id = 1;
}

message CreateRecodeForm {
  string message = 1;
}

  message Recode {
  int64 id = 1;
  string message = 2;
  google.protobuf.Timestamp createdAt = 3;
  google.protobuf.Timestamp updatedAt = 4;
}
